<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    android:padding="30dp"
    tools:context=".LoginAndSignUp.LoginSignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:rotation="180"
            android:src="@drawable/next_icon"
            android:onClick="back"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:rotation="90"
            android:src="@drawable/signin_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="130dp"


            android:fontFamily="@font/muli_black"
            android:text="@string/login_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_light"
            android:text="@string/login_dec"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:onClick="login_screen"
                android:text="@string/login"
                android:textColor="@color/black"
                tools:ignore = "ButtonStyle"
                android:transitionName="shared_element_login" />

            <Button
                android:id="@+id/signUp_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/signUp"
                android:textColor="@color/black"
                android:onClick="signUp_screen"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/help"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>