<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSignUp.ResetPassword.SuccessScreen"
    android:background="@color/lightWhite"
    android:padding="30dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:rotation="180"
        android:src="@drawable/next_icon"
        android:onClick="back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PasswordUpdated"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_gravity="center"
            android:src="@drawable/confirmation_icon"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PasswordUpdated_dec"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/black"
            android:onClick="goToLogin"/>



    </LinearLayout>
</LinearLayout>