<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSignUp.SignUp.SignUpScreen_2"
    android:background="@color/colorAccent"
    android:padding="30dp"
    android:transitionName="transition_signUp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signUp_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:rotation="180"
            android:src="@drawable/next_icon"
            android:transitionName="transition_back_button"
            android:onClick="back"/>

        <TextView
            android:id="@+id/signUp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:transitionName="transition_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/muli"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:layout_marginRight="5dp"
                    android:buttonTint="@color/black" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:layout_marginRight="5dp"
                    android:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other"
                    android:buttonTint="@color/black"/>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/muli"/>

            <DatePicker
                android:id="@+id/age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>


        </LinearLayout>

        <Button
            android:id="@+id/signUp_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/next_button"
            android:textColor="@color/black"
            android:transitionName="transition_next_button"
            android:onClick="nextSignUpScreen"/>

        <Button
            android:id="@+id/signUp_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_acc"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:transitionName="transition_login_button"
            android:onClick="goToLogin"/>

    </LinearLayout>
</ScrollView>