<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSignUp.ResetPassword.NewPasswordScreen"
    android:background="@color/lightWhite"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:padding="6dp"
            android:src="@drawable/cancel_icon"
            android:onClick="exit"/>

        <ImageView
            android:layout_width="134dp"
            android:layout_height="193dp"
            android:layout_gravity="center"
            android:src="@drawable/reset_password_icon"
            android:layout_marginLeft="8dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPassword"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verified"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password_hint"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:textColor="@color/black"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/confirmPassword"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/newPassword_loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:text="Next"
            android:textColor="@color/black"
            android:onClick="goToDashboard"/>


    </LinearLayout>
</ScrollView>