<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSignUp.SignUp.SignUpScreen3"
    android:background="@color/lightWhite"
    android:padding="30dp"
    android:transitionName="transition_signUp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signUp_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:rotation="180"
            android:src="@drawable/next_icon"
            android:onClick="back"/>

        <TextView
            android:id="@+id/signUp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="3dp"
            android:layout_below="@+id/login_welcome"
            android:id="@+id/login_dec"
            android:layout_width="300dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="Please fill in the information below"
            android:textSize="13sp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
>

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                android:visibility="invisible"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:background="@drawable/border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/phone"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="2dp"
                android:layout_marginTop="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/black"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signUp_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@drawable/rounded_button"
            android:text="@string/next_button"
            android:textColor="@color/black"
            android:transitionName="transition_next_button"
            android:onClick="otpScreen"/>

        <Button
            android:id="@+id/signUp_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_acc"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:transitionName="transition_login_button"
            android:onClick="goToLogin"/>

    </LinearLayout>
</ScrollView>